# walmart-sales

./: .flake8  .gitignore  README.md  lint.sh  mypy.ini  pyproject.toml
data/test/: test_data_processed.csv
notebooks/: baseline.ipynb  boosting.ipynb  dataset.ipynb  eda.ipynb
src/walmart_sales/: __init__.py  constants.py  utils.py
src/walmart_sales/data/: __init__.py  dataset.py  process_raw_data.py  transformer.py
src/walmart_sales/evaluation/: __init__.py  metrics.py  validation.py
src/walmart_sales/model/: __init__.py  baseline_models.py  model_base.py  model_lgbm.py
src/walmart_sales/visualization/: __init__.py  plot_forecast_vs_target.py
tests/: __init__.py  test_utils.py
tests/test_data/: test_dataset.py
