[tool.poetry]
name = "walmart-sales"
version = "0.1.0"
description = "Forecasting Walmart sales"
authors = ["astraszab <uladzislau_astrashab@epam.com>"]
readme = "README.md"
packages = [{include = "walmart_sales", from = "src"}]

[tool.poetry.scripts]
process-raw-data = "walmart_sales.data.process_raw_data:process_raw_data"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.0.0"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
click = "^8.1.3"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.3.0"
darglint = "^1.8.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.5.9"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
